加入红黑树分析

--- a/001/001.md
+++ b/001/001.md
@@ -1,1 +1,307 @@
-# 001 两数相加
+# 001 两数相加思路与Java的HashMap分析
+
+![题目介绍](http://oe4493xaz.bkt.clouddn.com/62e13b80cd92cea7e88d46a113916bbf.png)
+
+### 一：暴力遍历
+#### 显然最简单的方法是直接暴力遍历，通过每个元素x，并查找是否存在一个值与 target - x相等的目标元素。
+```java
+public int[] twoSum(int[] nums, int target) {
+    for (int i = 0; i < nums.length; i++) {
+        for (int j = i + 1; j < nums.length; j++) {
+            if (nums[j] == target - nums[i]) {
+                return new int[] { i, j };
+            }
+        }
+    }
+    throw new IllegalArgumentException("No two sum solution");
+}
+```
+#### 复杂度分析：
+* 时间复杂度：O(n^2)，对于每个元素，我们试图通过遍历数组的其余部分来寻找它所对应的目标元素，这将耗费 O(n)的时间。因此时间复杂度为 O(n^2)。
+* 空间复杂度：O(1)。
+
+
+### 二：哈希表查询
+#### 由于题目需要找到的是目标数的索引，因此可以通过哈希表来简化查询。通过以空间换取速度的方式，我们可以将查找时间从O(n)降低到O(1)。哈希表正是为此目的而构建的，它支持以“近似”恒定的时间进行快速查找。用“近似”来描述，是因为一旦出现冲突，查找用时可能会退化到 O(n)。
+#### 同时为了简化查询过程，在遍历数组将数据插入哈希表的同时可以检测表中是否已经存在当前元素对应的目标元素，如果存在可以直接返回。
+```java
+class Solution {
+    public int[] twoSum(int[] nums, int target) {
+       Map<Integer, Integer> map = new HashMap<>();
+        int[] result = new int[2];
+        for(int i=0;i<nums.length;i++){
+            int another = target - nums[i];
+            if(map.containsKey(another)){
+                result[0] = map.get(another);
+                result[1] = i;
+                return result;
+            }
+            map.put(nums[i],i);
+        }
+        return result;
+    }
+}
+```
+
+#### 复杂度分析：
+* 时间复杂度：O(n)，只遍历了包含有n个元素的数组一次。每次查找只花费O(1)的时间。
+* 空间复杂度：O(n)。所需的额外空间取决于哈希表中存储的元素数量，该表最多需要存储n个元素
+
+---
+### 关于哈希表HashMap
+#### 1.HashMap是基于哈希表的Map接口的非同步实现。此实现提供所有可选的映射操作，并允许使用null值和null键。此类不保证映射的顺序，特别是它不保证该顺序恒久不变。在JDK1.8之前 HashMap 的实现是 数组+链表，即使哈希函数取得再好，也很难达到元素百分百均匀分布，当极端条件下大量数据集中到同一个链表中，这个时候的hashmap近似为一个长链表，遍历的时间复杂度就是O(n)，失去它的优势。而在JDK1.8开始引入了红黑树(查找时间复杂度为O(logn))来优化这个问题
+
+#### 2.JDK1.8中HashMap的数据结构
+![HashMap数据结构示意图](http://oe4493xaz.bkt.clouddn.com/fc5f9f2f5f52b2ddb710d9611755fca7.png)
+##### 新增了红黑树
+```java
+static final class TreeNode<K,V> extends LinkedHashMap.Entry<K,V> {
+
+    TreeNode<K,V> parent;  // red-black tree links
+
+    TreeNode<K,V> left;
+
+    TreeNode<K,V> right;
+
+    TreeNode<K,V> prev;    // needed to unlink next upon deletion
+
+    boolean red;
+
+    TreeNode(int hash, K key, V val, Node<K, V> next)
+        {
+            super(hash, key, val, next);
+        }
+
+    final void treeify(Node<K,V>[] tab)
+    {
+        // ......
+    }    
+    static <K,V> TreeNode<K,V> balanceInsertion(TreeNode<K,V> root, TreeNode<K,V> x)
+    {
+        // ......
+    }    
+    static <K,V> TreeNode<K,V> rotateLeft(TreeNode<K,V> root, TreeNode<K,V> p)
+    {
+        // ......
+    }    
+    static <K,V> TreeNode<K,V> rotateRight(TreeNode<K,V> root, TreeNode<K,V> p)
+    {
+        // ......
+    }    
+    // ......其余方法省略
+
+}
+```
+##### 主要的三个参数
+TREEIFY_THRESHOLD 一个桶的树化阈值|UNTREEIFY_THRESHOLD 一个树的链表还原阈值|MIN_TREEIFY_CAPACITY 哈希表的最小树形化容量
+---|:--:|---:
+static final int TREEIFY_THRESHOLD = 8| static final int UNTREEIFY_THRESHOLD = 6|static final int MIN_TREEIFY_CAPACITY = 64
+当桶中元素个数超过这个值时需要使用红黑树节点替换链表节点|当扩容时，桶中元素个数小于这个值就会把树形的桶元素 还原（切分）为链表结构|当哈希表中的容量大于这个值时，表中的桶才能进行树形化，否则在这个容量之下元素过多时应该选择的时扩容而不是树形化。为了避免进行扩容和树形化选择的冲突，这个值不能小于 4 * TREEIFY_THRESHOLD
+
+##### 桶的树形化操作treeifyBin()
+当满足上面提到的条件，即整个表中元素超过64，一个桶中的元素超过了TREEIFY_THRESHOLD(默认为8)，就用红黑树来代替链表没从而提高速度。
+```java
+final void treeifyBin(Node<K, V>[] tab, int hash)
+    {
+        int n, index;
+        Node<K, V> e;
+        if (tab == null || (n = tab.length) < MIN_TREEIFY_CAPACITY)
+            //桶的容量小于预定值，应该选择扩容而不是树形化
+            resize();
+        // 通过hash求出bucket的位置。
+        else if ((e = tab[index = (n - 1) & hash]) != null)
+        {
+            TreeNode<K, V> hd = null, tl = null;
+            do
+            {
+                // 将每个节点包装成TreeNode。
+                TreeNode<K, V> p = replacementTreeNode(e, null);
+                if (tl == null)
+                    hd = p;
+                else
+                {
+                    // 将所有TreeNode连接在一起此时只是链表结构。
+                    p.prev = tl;
+                    tl.next = p;
+                }
+                tl = p;
+            } while ((e = e.next) != null);
+            if ((tab[index] = hd) != null)
+                // 对TreeNode链表进行树化。
+                hd.treeify(tab);
+        }
+    }
+```
+主要的操作就是树形化遍历桶中的元素，创建相同个数的树形节点，复制内容，建立起联系，然后让桶中第一个元素指向新建立的树头节点，替换桶的链表内容为树形内容。实际上链接在一起的TreeNode仍然是链表结构，真正的树化是在treeify()中完成的。
+
+##### 链表的树化操作treeify()
+```java
+final void treeify(Node<K, V>[] tab)
+    {
+        TreeNode<K, V> root = null;
+        // 以for循环的方式遍历刚才我们创建的链表。
+        for (TreeNode<K, V> x = this, next; x != null; x = next)
+        {
+            // next向前推进。
+            next = (TreeNode<K, V>) x.next;
+            x.left = x.right = null;
+            // 为树根节点赋值。
+            if (root == null)
+            {
+                x.parent = null;
+                x.red = false;
+                root = x;
+            } else
+            {
+                // x即为当前访问链表中的项。
+                K k = x.key;
+                int h = x.hash;
+                Class<?> kc = null;
+                // 此时红黑树已经有了根节点，上面获取了当前加入红黑树的项的key和hash值进入核心循环。
+                // 这里从root开始，是以一个自顶向下的方式遍历添加。
+                // for循环没有控制条件，由代码内break跳出循环。
+                for (TreeNode<K, V> p = root;;)
+                {
+                    // dir：directory，比较添加项与当前树中访问节点的hash值判断加入项的路径，-1为左子树，+1为右子树。
+                    // ph：parent hash。
+                    int dir, ph;
+                    K pk = p.key;
+                    if ((ph = p.hash) > h)
+                        dir = -1;
+                    else if (ph < h)
+                        dir = 1;
+                    else if ((kc == null && (kc = comparableClassFor(k)) == null)
+                            || (dir = compareComparables(kc, k, pk)) == 0)
+                        dir = tieBreakOrder(k, pk);
+
+                    // xp：x parent。
+                    TreeNode<K, V> xp = p;
+                    // 找到符合x添加条件的节点。
+                    if ((p = (dir <= 0) ? p.left : p.right) == null)
+                    {
+                        x.parent = xp;
+                        // 如果xp的hash值大于x的hash值，将x添加在xp的左边。
+                        if (dir <= 0)
+                            xp.left = x;
+                        // 反之添加在xp的右边。
+                        else
+                            xp.right = x;
+                        // 维护添加后红黑树的红黑结构。
+                        root = balanceInsertion(root, x);
+
+                        // 跳出循环当前链表中的项成功的添加到了红黑树中。
+                        break;
+                    }
+                }
+            }
+        }
+        // Ensures that the given root is the first node of its bin。
+        moveRootToFront(tab, root);
+    }
+```
+第一次循环会将链表中的首节点作为红黑树的根，而后的循环会将链表中的的项通过比较hash值然后连接到相应树节点的左边或者右边，插入可能会破坏树的结构所以接着执行`balanceInsertion`。
+##### 红黑树的插入平衡操作balanceInsertion()
+```java
+static <K, V> TreeNode<K, V> balanceInsertion(TreeNode<K, V> root, TreeNode<K, V> x)
+    {
+        // 正如开头所说，新加入树节点默认都是红色的，不会破坏树的结构。
+        x.red = true;
+        // 这些变量名不是作者随便定义的都是有意义的。
+        // xp：x parent，代表x的父节点。
+        // xpp：x parent parent，代表x的祖父节点
+        // xppl：x parent parent left，代表x的祖父的左节点。
+        // xppr：x parent parent right，代表x的祖父的右节点。
+        for (TreeNode<K, V> xp, xpp, xppl, xppr;;)
+        {
+            // 如果x的父节点为null说明只有一个节点，该节点为根节点，根节点为黑色，red = false。
+            if ((xp = x.parent) == null)
+            {
+                x.red = false;
+                return x;
+            }
+            // 进入else说明不是根节点。
+            // 如果父节点是黑色，那么大吉大利（今晚吃鸡），红色的x节点可以直接添加到黑色节点后面，返回根就行了不需要任何多余的操作。
+            // 如果父节点是红色的，但祖父节点为空的话也可以直接返回根此时父节点就是根节点，因为根必须是黑色的，添加在后面没有任何问题。
+            else if (!xp.red || (xpp = xp.parent) == null)
+                return root;
+
+            // 一旦我们进入到这里就说明了两件是情
+            // 1.x的父节点xp是红色的，这样就遇到两个红色节点相连的问题，所以必须经过旋转变换。
+            // 2.x的祖父节点xpp不为空。
+
+            // 判断如果父节点是否是祖父节点的左节点
+            if (xp == (xppl = xpp.left))
+            {
+                // 父节点xp是祖父的左节点xppr
+                // 判断祖父节点的右节点不为空并且是否是红色的
+                // 此时xpp的左右节点都是红的，所以直接进行上面所说的第三种变换，将两个子节点变成黑色，将xpp变成红色，然后将红色节点x顺利的添加到了xp的后面。
+                // 这里大家有疑问为什么将x = xpp？
+                // 这是由于将xpp变成红色以后可能与xpp的父节点发生两个相连红色节点的冲突，这就又构成了第二种旋转变换，所以必须从底向上的进行变换，直到根。
+                // 所以令x = xpp，然后进行下下一层循环，接着往上走。
+                if ((xppr = xpp.right) != null && xppr.red)
+                {
+                    xppr.red = false;
+                    xp.red = false;
+                    xpp.red = true;
+                    x = xpp;
+                }
+                // 进入到这个else里面说明。
+                // 父节点xp是祖父的左节点xppr。
+                // 祖父节点xpp的右节点xppr是黑色节点或者为空，默认规定空节点也是黑色的。
+                // 下面要判断x是xp的左节点还是右节点。
+                else
+                {
+                    // x是xp的右节点，此时的结构是：xpp左->xp右->x。这明显是第二中变换需要进行两次旋转，这里先进行一次旋转。
+                    // 下面是第一次旋转。
+                    if (x == xp.right)
+                    {
+                        root = rotateLeft(root, x = xp);
+                        xpp = (xp = x.parent) == null ? null : xp.parent;
+                    }
+                    // 针对本身就是xpp左->xp左->x的结构或者由于上面的旋转造成的这种结构进行一次旋转。
+                    if (xp != null)
+                    {
+                        xp.red = false;
+                        if (xpp != null)
+                        {
+                            xpp.red = true;
+                            root = rotateRight(root, xpp);
+                        }
+                    }
+                }
+            }
+            // 这里的分析方式和前面的相对称只不过全部在右测不再重复分析。
+            else
+            {
+                if (xppl != null && xppl.red)
+                {
+                    xppl.red = false;
+                    xp.red = false;
+                    xpp.red = true;
+                    x = xpp;
+                } else
+                {
+                    if (x == xp.left)
+                    {
+                        root = rotateRight(root, x = xp);
+                        xpp = (xp = x.parent) == null ? null : xp.parent;
+                    }
+                    if (xp != null)
+                    {
+                        xp.red = false;
+                        if (xpp != null)
+                        {
+                            xpp.red = true;
+                            root = rotateLeft(root, xpp);
+                        }
+                    }
+                }
+            }
+        }
+    }
+```
+如果x节点本身就是根节点或者x的父节点为黑色或者x父节点是根节点的话直接插入就可以了，否则会破坏树形结构需要进行平衡操作，颜色变换和平衡操作较为复杂，偷懒放个链接。[红黑树变换](https://www.cnblogs.com/finite/p/8251587.html)
+
+##### 加入红黑树之后HashMap的查找操作
+HashMap 的查找方法是 get(),它通过计算指定 key 的哈希值后，调用内部方法 getNode()，这个 getNode() 方法就是根据哈希表元素个数与哈希值求模（
+使用的公式是 (n - 1) &hash，得到 key 所在的桶的头结点，如果头节点恰好是红黑树节点，就调用红黑树节点的 getTreeNode() 方法，否则就遍历链表节点。而getTreeNode 方法使通过调用树形节点的 find()方法进行查找。由于之前添加时已经保证这个树是有序的，因此查找时基本就是折半查找，效率很高。
