--- a/001/001.md
+++ b/001/001.md
@@ -1,4 +1,4 @@
-# 001 两数相加思路与Java的HashMap分析
+# 001 两数之和思路与Java的HashMap分析
 
 ![题目介绍](http://oe4493xaz.bkt.clouddn.com/62e13b80cd92cea7e88d46a113916bbf.png)
 
